# bonsai-raytracer

./: .gitignore  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Colour.h  Container.cpp  Container.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Intersection.h  LList.h  Makefile  Object.h  Pixmap.cpp  Pixmap.h  Polynomial.cpp  Polynomial.h  Pool.h  Ray.h  Readme.markdown  RenderDispatcher.h  RenderServerConnection.h  RenderSettings.h  Renderer.cpp  Renderer.h  Scene.h  Sphere.cpp  Sphere.h  Transformation.cpp  Transformation.h  Vector.h  _sor.txt  client.cpp
client/: .gitignore  BoundingBox.cpp  CMakeLists.txt  Makefile  Polynomial.cpp  Readme.markdown  RenderDispatcher.cpp  RenderDispatcher.h  Surface.h  bonsai  bonsai-client  bounding_box.c  bounding_box.h  color.c  color.h  kd-tree.h  kd_tree.c  kd_tree.h  light.c  light.h  main.c  main.cpp  measurements.c  measurements.h  net_json.c  net_json.h  object.c  object.h  photon.c  photon.h  plane.c  plane.h  polynomial.c  polynomial.h  protocol.c  protocol.h  random.c  random.h  ray.c  ray.h  (+24 more)
client-old/: LList.h  Pixmap-saving.cpp  Pixmap.cpp  RenderDispatcher.cpp  RenderDispatcher.h  RenderServerConnection.h  Worker.h
common/: LList.h  Pixmap-saving.cpp  Pixmap.cpp  Pixmap.h  Polynomial.cpp  Polynomial.h  Scene.h  Transformation.cpp  Vector3D.h
doc/: .gitignore  Doxyfile  bounding_box_of_a_transformed_sphere.wxm  cayley.wxm  client_defines.txt  idea.txt  kd-tree_performance.txt  ray_transformations.wxm  sphere.wxm  torus.wxm
server/: RadianceHDR.pm  Raw.pm  Scene.pm  SharedDefs.pm  Worker.cpp  server.pl  (+1 more)
(+38 files in other folders)
